--- a/ticketing/infra/k8s/auth-depl.yaml
+++ b/ticketing/infra/k8s/auth-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: dmnhat91/auth
+          image: us.gcr.io/ticketing-dev-345514/auth
 ---
 apiVersion: v1
 kind: Service
