--- a/ticketing/auth/package.json
+++ b/ticketing/auth/package.json
@@ -21,5 +21,13 @@
     "mongoose": "^6.2.10",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.1",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.1",
+    "mongodb-memory-server": "^8.6.0",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.5"
   }
 }
