--- a/ticketing/infra/k8s/ingress-srv.yaml
+++ b/ticketing/infra/k8s/ingress-srv.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx # help the ingress controller understand we are trying to feed it with some routing rules
-    nginx.ingress.kubernetes.io/use-regex: 'true' # to allow to use regular expression in path config like /posts/?(.*)/comments
+    nginx.ingress.kubernetes.io/use-regex: "true" # to allow to use regular expression in path config like /posts/?(.*)/comments
 spec:
   rules:
     - host: ticketing.dev
@@ -15,5 +15,12 @@ spec:
             backend:
               service:
                 name: auth-srv
+                port:
+                  number: 3000
+          - path: /?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: client-srv
                 port:
                   number: 3000
